--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -71,6 +71,7 @@ ul#articles_title li a span.tp_articles_title
     font-size: large;
     color: #cc6699;
     margin: 5px;
+    clear: none;
 }
 
 ul#articles_title li a span.st_name, ul#articles_title li a span.st_belong
