topics4 detail1 display
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@7044 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -99,7 +99,7 @@ ul#articles_title li a *
 ul#articles_detail
 {
     width: 941px;
-    display: none;
+    /*display: none;*/
     position: relative;
     top: -145px;
     left: -40px;
@@ -118,11 +118,17 @@ ul#articles_detail li:after
 
 ul#articles_detail li
 {
+    display: none;
     background-color: #F9F9FF;
     position: relative;
     top: 80px;
     left: 30px;
     width: 800px;
+}
+
+ul#articles_detail li#detail1
+{
+    display: inherit;
 }
 
 ul#articles_detail li h1
