topics4 detail1 display
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@7045 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -39,7 +39,7 @@ ul#articles_title li a
     display: block;
     width: 400px;
     height: 85px;
-    padding-left: 30px;
+    padding: 2px 20px 2px 30px;
     background-image: url("../../images/ja/topics4/check_off.png");
     background-repeat: no-repeat;
     background-position: 0px center;
