--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -20,7 +20,7 @@ p#lead
 ul#articles_title
 {
     margin: 0px 0px 10px -52px;
-    padding: 100px 0px 120px 30px;
+    padding: 110px 0px 110px 50px;
     width: 960px;
     background-image: url("../../images/ja/topics4/background1.png");
     background-repeat: no-repeat;
@@ -30,14 +30,14 @@ ul#articles_title
 ul#articles_title li 
 {
     height: 90px;
-    width: 440px;
+    width: 430px;
     float: left;
 }
 
 ul#articles_title li a
 {
     display: block;
-    width: 400px;
+    width: 390px;
     height: 85px;
     padding: 2px 20px 2px 30px;
     background-image: url("../../images/ja/topics4/check_off.png");
@@ -99,6 +99,7 @@ ul#articles_title li a *
 ul#articles_detail
 {
     width: 941px;
+    height: 747px;
     /*display: none;*/
     position: relative;
     top: -145px;
@@ -124,6 +125,7 @@ ul#articles_detail li
     top: 80px;
     left: 30px;
     width: 800px;
+    padding: 20px;
 }
 
 ul#articles_detail li#detail1
@@ -135,7 +137,7 @@ ul#articles_detail li h1
 {
     color: #1e90ff;
     font-weight: lighter;
-    margin: 30px;
+    margin: 10px;
 }
 
 ul#articles_detail li h1:before
@@ -159,7 +161,7 @@ ul#articles_detail li p.comment_l
     color: white;
     width: 283px;
     height: 154px;
-    margin: 10px 0px 0px 10px;
+    margin: 0px 0px 0px 0px;
     padding: 46px 16px 18px 29px;
     background-image: url(../../images/ja/topics4/l_hukidashi.png);
     background-repeat: no-repeat;
@@ -172,7 +174,7 @@ ul#articles_detail li p.comment_s
     color: white;
     width: 180px;
     height: 98px;
-    margin: 10px 0px 0px 50px;
+    margin: 0px 0px 0px 50px;
     padding: 30px 13px 12px 18px;
     background-image: url(../../images/ja/topics4/hukidashi.png);
     background-repeat: no-repeat;
@@ -192,7 +194,7 @@ ul#articles_detail li img.person
 {
     clear: left;
     float: left;
-    margin: 10px 0px 0px 80px;
+    margin: -30px 0px 0px 100px;
     display: block;
 }
 
