topics4 css background
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@7067 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -25,6 +25,8 @@ ul#articles_title
     background-image: url("../../images/ja/topics4/background1.png");
     background-repeat: no-repeat;
     background-position: top left;
+    z-index: 9;
+    position: relative;
 }
 
 ul#articles_title li 
