topics4 css package2 width
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@7068 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -1,7 +1,12 @@
+div#package2
+{
+    width: 100%;
+}
+
 div#contents
 {
     margin-right: 0;
-    width: 895px !important;
+    width: 905px !important;
 }
 
 div#tp_header
