--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -180,7 +180,7 @@ ul#articles_detail li p.comment_s
     color: white;
     width: 180px;
     height: 98px;
-    margin: 0px 0px 0px 50px;
+    margin: 39px 0px 39px 50px;
     padding: 30px 13px 12px 18px;
     background-image: url(../../images/ja/topics4/hukidashi.png);
     background-repeat: no-repeat;
@@ -200,7 +200,7 @@ ul#articles_detail li img.person
 {
     clear: left;
     float: right;
-    margin: -65px 0px 0px 10px;
+    margin: -60px 0px 0px 10px;
     display: block;
 }
 
@@ -209,7 +209,7 @@ p.tp_resources
     text-align: right;
     clear: both;
     color: #CC6699;
-    font-size: larger;
+    /*font-size: larger;*/
     max-width: 40%;
     position: relative;
     top: -128px;
