--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -212,7 +212,8 @@ p.tp_resources
     /*font-size: larger;*/
     max-width: 40%;
     position: relative;
-    top: -140px;
+    top: -155px;
+    margin-left: 20px;
 }
 
 #hr_marker
