--- a/css/course.css
+++ b/css/course.css
@@ -85,7 +85,7 @@
         margin-bottom: 0em;
         margin-top: 1.5em;
 
-        float:left;
+/*        float:left; */
         width:555px;
 }
 
