topics backnumber 修正
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@7248 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics2010.css
+++ b/css/topics/topics2010.css
@@ -2,8 +2,18 @@
 	display: none;
 }
 
+#sc_header{
+	clip: rect(0, 0, 160px, 0);
+	position: absolute;
+}
+
 #msgs{
 	display: none;
+}
+
+#msg_header{
+	clip: rect(0, 0, 200px, 0);
+	position: absolute;
 }
 
 #msg_top_image{
