topics backnumber 修正test
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@7249 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics2010.css
+++ b/css/topics/topics2010.css
@@ -3,7 +3,6 @@
 }
 
 #sc_header{
-	clip: rect(0, 0, 160px, 0);
 	position: absolute;
 }
 
@@ -11,9 +10,12 @@
 	display: none;
 }
 
-#msg_header{
-	clip: rect(0, 0, 200px, 0);
-	position: absolute;
+#msg_whole{
+	height: 200px;
+}
+
+#msg_whole:active{
+	height: auto;
 }
 
 #msg_top_image{
