topics backnumber 修正test
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@7251 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics2010.css
+++ b/css/topics/topics2010.css
@@ -3,7 +3,7 @@
 }
 
 #sc_header{
-	position: absolute;
+
 }
 
 #msgs{
@@ -15,7 +15,7 @@
 }
 
 #msg_whole:active{
-	height: auto;
+	height: 1000px;
 }
 
 #msg_top_image{
