topics backnumber 修正test
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@7254 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics2010.css
+++ b/css/topics/topics2010.css
@@ -2,20 +2,20 @@
 	display: none;
 }
 
-#sc_header{
-
-}
-
 #msgs{
 	display: none;
 }
 
-#msg_whole{
-	height: 200px;
+#sc_header{
+	margin-bottom: -300px;
 }
 
-#msg_whole:hover{
-	height: auto;
+#sc_header:hover{
+	margin-bottom: 10px;
+}
+
+#msg_header{
+	height: 200px;
 }
 
 #msg_top_image{
