topics backnumber 修正test
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@7256 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics2010.css
+++ b/css/topics/topics2010.css
@@ -27,6 +27,7 @@
 }
 
 #fs_header{
+	background: white;
 	margin-bottom: -300px;
 }
 
@@ -35,7 +36,7 @@
 }
 
 #hs_header{
-	margin-bottom: -50px;
+	margin-bottom: -70px;
 }
 
 #hs_header:hover{
@@ -44,14 +45,13 @@
 
 #msg_top_image{
     width: 700px;
-    height: 400px;
+    height: 200px;
     position: relative;
     z-index: 1;
-	margin-bottom: -200px;
 }
 
-#msg_top_image{
-	margin-bottom: 10px;
+#msg_top_image:hover{
+	height: 400px;
 }
 
 #msgs{
