topics backnumber 修正test
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@7257 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics2010.css
+++ b/css/topics/topics2010.css
@@ -35,22 +35,19 @@
 	margin-bottom: 10px;
 }
 
-#hs_header{
-	margin-bottom: -70px;
-}
-
-#hs_header:hover{
-	margin-bottom: 10px;
+#msg_header{
+	height: 200px;
+	overflow: hidden;
 }
 
 #msg_top_image{
     width: 700px;
-    height: 200px;
+    height: 400px;
     position: relative;
     z-index: 1;
 }
 
-#msg_top_image:hover{
+#msg_header:hover{
 	height: 400px;
 }
 
