topics backnumber 修正test
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@7265 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics2010.css
+++ b/css/topics/topics2010.css
@@ -31,12 +31,15 @@
 	margin-bottom: 10px;
 }
 
+#hs_header{
+	margin-bottom: -20px;
+}
+
 #msg_top_image{
     width: 700px;
     height: 400px;
     position: relative;
     z-index: 1;
-	margin-bottom: -20px;
 }
 
 #msgs{
