topics backnumber 修正
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@7269 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics2010.css
+++ b/css/topics/topics2010.css
@@ -2,10 +2,11 @@
 	display: none;
 }
 
-#msgs{
+#msgs_whole{
 	display: none;
 }
 
+/*
 #sc_header{
 	margin-bottom: -235px;
 }
@@ -35,6 +36,7 @@
 #hs_header{
 	margin-bottom: -15px;
 }
+*/
 
 #msg_top_image{
     width: 700px;
