topics backnumber header_img test
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@7280 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics2010.css
+++ b/css/topics/topics2010.css
@@ -2,7 +2,7 @@ p.bn_items{
 	position: relative;
 }
 
-p.bn_items{
+p.bn_items img{
 	position: absolute;
 	clip: rect(50px, 350px, 100px, 100px);
 }
