--- a/css/topics/topics2010.css
+++ b/css/topics/topics2010.css
@@ -4,7 +4,10 @@ p.bn_items{
 
 p.bn_items img{
 	position: absolute;
-	clip: rect(50px, 350px, 100px, 100px);
+	display: block;
+	height: 420px;
+	width: 730px;
+	clip: rect(50px,350px,100px,100px);
 }
 
 #hs{
