topics backnumber header_img test
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@7282 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics2010.css
+++ b/css/topics/topics2010.css
@@ -4,10 +4,11 @@ p.bn_items{
 
 p.bn_items img{
 	position: absolute;
+	top: 30px;
 	display: block;
 	height: 420px;
 	width: 730px;
-	clip: rect(50px,350px,100px,100px);
+	clip: rect(50px 350px 100px 100px);
 }
 
 #hs{
