topics backnumber header_img test
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@7283 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics2010.css
+++ b/css/topics/topics2010.css
@@ -1,8 +1,8 @@
-p.bn_items{
+p.bn_item{
 	position: relative;
 }
 
-p.bn_items img{
+p.bn_item img{
 	position: absolute;
 	top: 30px;
 	display: block;
