--- a/css/topics/topics2010.css
+++ b/css/topics/topics2010.css
@@ -4,10 +4,9 @@ p.bn_item{
 
 p.bn_item img{
 	position: absolute;
-	top: 30px;
-	display: block;
+/*	display: block;
 	height: 420px;
-	width: 730px;
+	width: 730px; */
 	clip: rect(50px 350px 100px 100px);
 }
 
