topics backnumber header_img test
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@7285 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics2010.css
+++ b/css/topics/topics2010.css
@@ -4,9 +4,8 @@ p.bn_item{
 
 p.bn_item img{
 	position: absolute;
-/*	display: block;
-	height: 420px;
-	width: 730px; */
+	height: 50%;
+	width: 50%; 
 	clip: rect(50px 350px 100px 100px);
 }
 
