topics backnumber header_img test
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@7288 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics2010.css
+++ b/css/topics/topics2010.css
@@ -4,8 +4,8 @@ p.bn_item{
 
 p.bn_item img{
 	position: absolute;
-	height: 100%;
-	width: 100%; 
+	height: 210px;
+	width: 365px; 
 	clip: rect(0px 730px 420px 0px);
 }
 
