英語版コースリストに表示される部局紹介の部局長の表示位置を調整.
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@7355 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/clist.css
+++ b/css/clist.css
@@ -75,12 +75,6 @@ table.sorttable{
 	display : none;
 }
 
-#dep_info_head_dean{
-        position: relative;
-        top: 70px;
-	left:530px; 
-}
-
 #dep_info_title{
         position: relative;
         top: 16px;
@@ -110,6 +104,12 @@ table.sorttable{
 }
 
 
+#dep_info_head_dean{
+  position: relative;
+  top: 70px; left: 35px; 
+  width: 630px;
+  text-align: right;
+}
 
 #dep_txt_en{
         position: relative;
