--- a/css/googleSearch.css
+++ b/css/googleSearch.css
@@ -7,10 +7,13 @@
     border-color: #ffffff;
   }
   input.gsc-search-button {
-border-color:#cccccc;    
-background-color: #cccccc;
-height: 28px;
+    border-color:#cccccc;    
+    background-color: #cccccc;
+    height: 28px;
 
+  }
+  input.gsc-search-button:after {
+    content: url(../images/search2.png);
   }
   .gsc-tabHeader.gsc-tabhInactive {
     border-color: #A9DA92;
