--- a/css/googleSearch.css
+++ b/css/googleSearch.css
@@ -13,7 +13,7 @@
 
   }
   input.gsc-search-button:after {
-    content: url(../images/common/search2.png);
+    content: url(../../images/common/search2.png);
   }
   .gsc-tabHeader.gsc-tabhInactive {
     border-color: #A9DA92;
