topics_common_tmp.css backup delete
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@7447 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -135,6 +135,25 @@ div#vertical_border
     bottom: 0;*/
 }
 
+#intro1,#intro2,#intro3,#intro4,#intro5,#intro6
+{
+    display: none;
+}
+
+#blue_bar1,#blue_bar2,#blue_bar3,#blue_bar4,#blue_bar5,#blue_bar6
+{
+    height: 4px;
+    background-color: #99CCCC;
+    color: #99CCCC;
+    border: none;
+    display: none;
+    margin: 0;
+    padding: 0;
+    width: 310px;
+/*    position: absolute;
+    bottom: 0;*/
+}
+
 #articles_intro li h2 /* キャッチコピー */
 {
     font-weight: 500;
