--- a/css/top.css
+++ b/css/top.css
@@ -154,6 +154,12 @@ img#prj10{
     left: 120px;
     width: 110px;
   }
+  #toppage_chairperson_name {
+    position: relative
+    top: 60px;
+    left: 120px;
+    width: 110px;
+  }
 	#toppage_greeting a{
       padding-left:12px;
   	}
