--- a/css/top.css
+++ b/css/top.css
@@ -156,9 +156,10 @@ img#prj10{
   }
   #toppage_chairperson_name {
     position: relative
-    top: 60px;
-    left: 120px;
-    width: 110px;
+    top: 0px;
+    left: 13px;
+    width: 107px;
+    line-height: 12px;    
   }
 	#toppage_greeting a{
       padding-left:12px;
