--- a/css/top.css
+++ b/css/top.css
@@ -155,7 +155,7 @@ img#prj10{
     width: 110px;
   }
   #toppage_chairperson_name {
-    position: relative
+    position: relative;
     top: 0px;
     left: 13px;
     width: 107px;
