--- a/css/topics/5.css
+++ b/css/topics/5.css
@@ -1,6 +1,6 @@
 div#tp_default
 {
-    background-image: url("../../images/ja/topics5/kokoro_bg");
+    background-image: url("../../images/ja/topics5/kokoro_bg.jpg");
     background-repeat: no-repeat;
 }
 
