--- a/css/topics/5.css
+++ b/css/topics/5.css
@@ -71,6 +71,6 @@ h2 {
 a.tp_link {
     background-image : url("../../images/ja/topics5/kokoro_linkbutton.png");
     right : 130px;
-    widht : 180px;
+    width : 180px;
     height : 180px;
 }
