--- a/css/clist.css
+++ b/css/clist.css
@@ -150,8 +150,9 @@ a#more_en{
 
 #dep_movie{
 	position: absolute;
-	top: 80px;
-	left: 560px;
+	top: 195px;
+	left: 590px;
+	font-size: 25px;
 }
 
 /*
