講義ビデオが見られない注意書きの行間詰め用
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@7746 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/common/default.css
+++ b/css/common/default.css
@@ -108,6 +108,11 @@ ol.upper-alpha{
 	list-style-type: upper-alpha;    /*大文字のアルファベット*/
 }
 
+/*講義ビデオが見られない注意書き用応急処置*/
+#mgnzero{	/*pタグにこのクラスを適用してください*/
+	padding: 0 0 0 0;	/*行間を詰める*/
+}
+
 /*
 ------------------------------------------------------------
   共通のページの構造    
