--- a/css/common/default.css
+++ b/css/common/default.css
@@ -109,8 +109,8 @@ ol.upper-alpha{
 }
 
 /*講義ビデオが見られない注意書き用応急処置*/
-#mgnzero{	/*pタグにこのクラスを適用してください*/
-	padding: 0 0 0 0;	/*行間を詰める*/
+#movie_caution{	/*divタグにこのクラスを適用してください*/
+	margin-top: 0.5 em;	/*行間を詰める*/
 }
 
 /*
