movie caution message
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@7748 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/common/default.css
+++ b/css/common/default.css
@@ -109,7 +109,7 @@ ol.upper-alpha{
 }
 
 /*講義ビデオが見られない注意書き用応急処置*/
-#movie_caution{	/*divタグにこのクラスを適用してください*/
+.movie_caution{	/*divタグにこのクラスを適用してください*/
 	margin-top: 0.5 em;	/*行間を詰める*/
 }
 
