--- a/css/common/default.css
+++ b/css/common/default.css
@@ -110,8 +110,7 @@ ol.upper-alpha{
 
 /*講義ビデオが見られない注意書き用応急処置*/
 div.movie_caution{	/*divタグにこのクラスを適用してください*/
-	margin-top: 0.5 em;	/*行間を詰める*/
-	font-size: 50pt;
+	margin: 0;	/*行間を詰める*/
 }
 
 /*
