movie caution message(test3)
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@7751 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/common/default.css
+++ b/css/common/default.css
@@ -111,6 +111,7 @@ ol.upper-alpha{
 /*講義ビデオが見られない注意書き用応急処置*/
 div.movie_caution{	/*divタグにこのクラスを適用してください*/
 	margin: 0;	/*行間を詰める*/
+	padding: 0;
 }
 
 /*
