--- a/css/topics/6.css
+++ b/css/topics/6.css
@@ -1,6 +1,6 @@
 div#tp_default
 {
-    background-image: url("../../images/ja/topics5/kokoro_bg.png");
+    background-image: url("../../images/ja/topics6/back");
     background-repeat: no-repeat;
     height: 1220px;
 }
