--- a/css/topics/6.css
+++ b/css/topics/6.css
@@ -1,7 +1,7 @@
 div#tp_default
 {
     background-image: url("../../images/ja/topics6/back");
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     height: 1220px;
 }
 
@@ -43,7 +43,6 @@ div#tp_default
 {
     padding: 25px 0px 30px 25px;
     height: 520px;
-    background-image: url(../../images/ja/topics5/kokoro_contents_zabuton.png);
     background-size: cover;
     margin: 15px 0px 0px 0px;
     opacity: 0.9;
@@ -77,7 +76,7 @@ h2 {
 }
 
 a.tp_link {
-    background-image : url("../../images/ja/topics5/kokoro_linkbutton.png");
+    background-image : url("../../images/ja/topics6/window.png");
     right : 130px;
     width : 180px;
     height : 180px;
