#articles_title li img を編集
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@7784 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/6.css
+++ b/css/topics/6.css
@@ -28,6 +28,12 @@ div#tp_default
     color: #020202;
 }
 
+#articles_title li img
+{
+    width:	auto;
+    height: 	auto;
+}
+
 #articles_detail
 {
     background-image: url("../../images/ja/topics3/background2.png");
