--- a/css/topics/6.css
+++ b/css/topics/6.css
@@ -39,6 +39,11 @@ div#tp_default
     background-image: url("../../images/ja/topics3/background2.png");
 }
 
+.art_title
+{
+    padding: 0px 0px;
+}
+
 #intro_message
 {    
     text-align: center;
