picture_size change
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@7799 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/6.css
+++ b/css/topics/6.css
@@ -87,6 +87,12 @@ a.tp_link {
     margin: -30px -70px 0px 0px;
 }
 
+a.tp_link img{
+    width: 260px;
+    height: 190px;
+    margin: -57px;
+}
+
 #contents {
     font-family: "ＭＳ 明朝",sans-serif;
 }
