h2 font_color_change
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@7802 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/6.css
+++ b/css/topics/6.css
@@ -70,8 +70,10 @@ div#tp_default
 }
 
 h2 {
-    color: #FFFFFF;
+    color: #ff527b;
     margin: 0px;
+    font-size: 20pt;
+    text-align: center;
 }
 
 .art_title h2 {
