fontsize&p_margin change
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@7812 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/6.css
+++ b/css/topics/6.css
@@ -72,10 +72,11 @@ div#tp_default
 h2 {
     color: #ff527b;
     margin: 0px;
-    font-size: 18pt;
+    font-size: 17pt;
     text-align: center;
     font-weight: bold;
 }
+
 
 .art_title h2 {
     color: rgb(153, 204, 204);
@@ -87,6 +88,10 @@ a.tp_link {
     right : 130px;
     width : 430px;
     height : 220px;
+    margin: -30px -70px 0px 0px;
+}
+
+p.tp_link{
     margin: -30px -70px 0px 0px;
 }
 
