--- a/css/topics/6.css
+++ b/css/topics/6.css
@@ -75,6 +75,7 @@ h2 {
     font-size: 17pt;
     text-align: center;
     font-weight: bold;
+    margin-top: 250px;
 }
 
 
@@ -108,6 +109,7 @@ a.tp_link img{
 
 p.lead {
     line-height: 30px;
+    margin-top: 250px;
 }
 
 .bg_off {
