kanban img padding
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@7909 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/top.css
+++ b/css/top.css
@@ -44,6 +44,7 @@
 		padding: 5px 5px 0 0;
 		zoom: 1;
 	}
+
 .waku img{
 		margin-left: 5px;
 }
@@ -252,3 +253,7 @@ img#prj10{
 }
 
 
+/* 看板画像を2つ同時に表示するとき */
+#special_head {
+   padding-top: 25px;
+}
