--- a/css/summercamp.css
+++ b/css/summercamp.css
@@ -1,36 +1,1 @@
-img#img1 {
-    height: 194px;
-    margin: 50px 32px 0 0;
-    width: 278px;
-    float: right;
-}
-
-img#img2 {
-    height: 198px;
-    margin: 100px -279px 0px 10px;
-    width: 279px;
-    float: right;
-}
-
-img#img3 {
-    float: right;
-    height: 330px;
-    margin: 65px -285px 0px 20px;
-    width: 273px;
-}
-
-img#img4 {
-    height: 194px;
-    left: 600px;
-    width: 278px;
-    float: right;
-    position: absolute;
-    top: 60px;
-}
-
-img#img5 {
-    height: 198px;
-    margin: -25px 29px 0px 10px;
-    width: 277px;
-    float: right;
-}
+/* TOPICS特別編  */
