--- a/css/summercamp.css
+++ b/css/summercamp.css
@@ -12,5 +12,21 @@ text-decoration: underline;
 }
 
 #profile {
-padding: 10px ;
+margin-top: 30px ;
+margin-bottom: 30px ;
+}
+
+.q_title {
+margin-top: 30px;
+margin-bottom: 30px;
+}
+
+div#video {
+margin-top: 30px;
+margin-bottom: 30px;
+}
+
+#info2014 {
+margin-top: 30px
+margin-bottom: 30px
 }
