summercamp edit tpl
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@7989 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/summercamp.css
+++ b/css/summercamp.css
@@ -30,3 +30,13 @@ margin-bottom: 30px;
 margin-top: 30px;
 margin-bottom: 30px;
 }
+
+.qq {
+margin-top: 30px;
+margin-bottom: 30 px;
+}
+
+#intro{
+margin-top: 30px
+margin-top: 30px
+}
