--- a/css/summercamp.css
+++ b/css/summercamp.css
@@ -37,6 +37,10 @@ margin-bottom: 30 px;
 }
 
 #intro{
-margin-top: 30px
-margin-top: 30px
+margin-top: 30px;
+margin-top: 30px;
+}
+
+#rai{
+width: 710px;
 }
