--- a/css/summercamp.css
+++ b/css/summercamp.css
@@ -19,6 +19,7 @@ margin-bottom: 30px ;
 .q_title {
 margin-top: 30px;
 margin-bottom: 30px;
+font-size:medium;
 }
 
 div#video {
@@ -33,7 +34,8 @@ margin-bottom: 30px;
 
 .qq {
 margin-top: 30px;
-margin-bottom: 30 px;
+margin-bottom: 30px;
+color:gray;
 }
 
 #intro{
@@ -43,4 +45,8 @@ margin-top: 30px;
 
 #rai{
 width: 710px;
+}
+
+#kikite{
+color:gray;
 }
