cssでいいねボタンの位置を変える
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@8851 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/course.css
+++ b/css/course.css
@@ -205,4 +205,8 @@ table.basic ul, table.basic ol, table.basic dl {
 	margin: 10px 0 10px 0;
 	padding: 0 0 0 25px;
 }
-
+/* Facebook いいねボタンの位置  */
+.fb_iframe_widget{
+    top: -5px;
+    margin: 0 0 0 20px;
+}
