ノーベル賞PR用バナー画像導入に伴うcssの変更
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@8892 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/top.css
+++ b/css/top.css
@@ -254,7 +254,9 @@ img#prj10{
 
 
 /* Topicsを2つ並行して公開するとき */
-
-#special_head {
+#topics_head{
+    margin: 25px 0 0 0;
+}
+/*#special_head {
    padding-top: 25px;
-} 
+}*/
